<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/score_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMatchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/textViewTargetUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_tv_margin_start"
                android:layout_weight="1"
                android:text="@string/target_username_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMatchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_tv_margin_top"
            android:text="@string/match_date"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/cardview_layout_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMatchTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_time"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewMatchResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_tv_margin_top"
            android:text="@string/match_result_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>